# SearchAssistantProduction

./: .gitignore  CLAUDE.md  README.md  architecture-diagrams.html  cd-dispatcher-steps.md  cd-ecs-deploy-steps.md  cd-lambda-deploy-steps.md  ci-cd-eks-steps.md  ci-pipeline-steps.md  completed.md  crag-case-study.md  eks-manual-deploy-steps.md  enterprize-deploy-steps.md  github-workflow-trigger.md  grand-enterprize-deploy-steps.md  graph.py  main.py  plan.md  pyproject.toml  real-aws-cicd-setup.md
.github/workflows/: cd-ecs.yml  cd-eks.yml  cd-lambda.yml  ci.yml
auth/: dependencies.py
backend/: .env.example  pyproject.toml
backend/api/routers/: auth.py
backend/auth/: dependencies.py
backend/eval/: dataset.py  langfuse_eval.py  metrics.py  run_eval.py
backend/multi_agent/.chroma/: chroma.sqlite3
backend/tests/phase3_auth/: test_dependencies.py
backend/tests/phase9_eval/: test_dataset_and_metrics.py
cache/: exceptions.py  sessions.py
chains/: generation.py
frontend/components/: ThemeProvider.tsx
frontend/lib/: api.test.ts  api.ts
infra/bootstrap/: github-oidc.tf
infra/fargate/: network.tf  ssm.tf
infra/lambda-gate/: cloudfront.tf  ecr.tf  providers.tf  ssm.tf
loopeng/: README.md
loopeng/01-methodology/: loop-engineering-approach.md  phase-to-loop-mapping.md  stop-conditions.md
loopeng/constraints/: standing-constraints.md
loopeng/hooks/: destructive-command-guard.sh  msys-pathconv-guard.sh  settings.snippet.json
loopeng/loops/: loop-catalog.md  loop-state-tracking.md
loopeng/plugins/: plugin-manifest-design.md  plugin.json
loopeng/skills/cloudfront-refresh/: SKILL.md
loopeng/skills/gap-log/: SKILL.md
loopeng/skills/phase-close/: SKILL.md
loopeng/skills/phase-scaffold/: SKILL.md
loopeng/subagents/: destructive-action-guard.md  infra-gap-hunter.md  phase-verifier.md
loopengfable/: README.md
loopengfable/approach/: 00-operating-model.md  01-steps.md  02-retrospective-map.md
loopengfable/constraints/: constraints.index.json  constraints.md
loopengfable/hooks/: pretooluse-cloudfront-staleness.sh  pretooluse-destructive-gate.sh  pretooluse-msys-guard.sh  settings.fragment.json  stop-state-persistence-nudge.sh
loopengfable/loopspecs/: LOOPSPEC-FORMAT.md  clean-slate-verify.loop.md  dual-target-parity.loop.md  feature-build.loop.md  incident-rca.loop.md  pipeline-automation.loop.md  teardown-rebuild.loop.md
loopengfable/plugin/: PACKAGING.md  plugin.json
loopengfable/skills/gap-capture/: SKILL.md
loopengfable/skills/loop-check/: SKILL.md
loopengfable/skills/loop-close/: SKILL.md
loopengfable/skills/loop-start/: SKILL.md
loopengfable/stop-conditions/: admissibility-rules.md
loopengfable/subagents/: loop-warden.md  parity-checker.md  stop-condition-auditor.md
nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
observability/: __init__.py  langfuse_client.py
tests/phase3_auth/: test_dependencies.py  test_jwt.py
tests/phase4_cache/: test_sessions.py
tests/phase5_graph/: test_resilience.py
