[project]
name = "crag-multi-agent"
version = "0.1.0"
description = "Corrective RAG multi-agent pipeline built with LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Core CRAG graph
    # Pinned to the pre-1.0 LangChain/LangGraph API this codebase targets
    # (langchain.hub, langgraph.checkpoint.memory.MemorySaver, langchain.schema.Document, etc.)
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.2",
    "langchainhub>=0.1",
    "chromadb>=0.5,<0.6",
    "tavily-python>=0.5",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    # Resilience (Phase 5): bounded retries around external LLM/Tavily/Chroma calls
    "tenacity>=9.0",
    # Observability (Phase 5/10): agent tracing. Tightened from >=3.0 once Phase 9 code
    # was written and verified against the actually-installed 4.13.0 (dataset.run_experiment,
    # Evaluation, ExperimentResult.dataset_run_url are 4.x-only APIs) — see plan.md Phase 9.
    "langfuse>=4.0,<5",
]

[project.optional-dependencies]
prod = [
    # FastAPI server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # PostgreSQL (two drivers — SQLAlchemy async + LangGraph AsyncPostgresSaver)
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    # Redis cache
    "redis>=5.2",
    # Auth
    "python-jose[cryptography]>=3.3",
    # Hash passwords with bcrypt directly, not passlib: passlib 1.7.4 (unmaintained since
    # 2020) is incompatible with bcrypt>=4.0 (removed __about__.__version__, and bcrypt 5.x
    # raises instead of truncating on passlib's internal 72-byte self-test). chromadb already
    # requires bcrypt>=4.0.1, so pinning bcrypt down for passlib isn't resolvable anyway.
    "bcrypt>=4.0",
    # Structured logging
    "structlog>=24.0",
    # Centralized settings (Phase 6): config.py
    "pydantic-settings>=2.0",
    # EmailStr validation in api/schemas/auth.py
    "email-validator>=2.0",
]
eval = [
    # Pinned — ragas 0.4.x's metric classes require an InstructorBaseRagasLLM (via
    # ragas.llms.llm_factory), not the deprecated LangchainLLMWrapper; verified against the
    # actually-installed version rather than the originally-planned 0.2.* (see plan.md Phase 9)
    "ragas==0.4.*",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fakeredis>=2.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call real LLMs or external APIs",
    "requires_db: marks tests that need a reachable Postgres instance",
    "requires_redis: marks tests that need a reachable Redis instance",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
